--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
     <link rel="stylesheet" href="./styles.css">
-    <script href="./rockpaperscissors.js"></script>
+    <script src="./rockpaperscissors.js"></script>
 </head>
 <body>
 <h1>Rock, Paper, Scissors</h1>
