--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
     <link rel="stylesheet" href="./styles.css">
-    <script src="./rockpaperscissors.js"></script>
+    <script src="./rockpaperscissors.js" defer></script>
 </head>
 <body>
 <h1>Rock, Paper, Scissors</h1>
-<p>Open the console for output: we're still learning.</p>
+<p></p>
+<div class="buttoncontainer">
+    <button id="rockButton" value="Rock">Rock</button>
+    <button id="paperButton" value="Paper">Paper</button>
+    <button id="scissorsButton" value="Scissors">Scissors</button>    
+</div>
 </body>
 </html>
