Implement GUI readout

--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     <button id="paperButton" value="Paper">Paper</button>
     <button id="scissorsButton" value="Scissors">Scissors</button>    
 </div>
+<div class ="gameresults">
+</div>
 </body>
 </html>
