Add endgame, improve styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./rockpaperscissors.js" defer></script>
 </head>
 <body>
-<h1>Rock, Paper, Scissors</h1>
+<h1 id="title">Rock, Paper, Scissors</h1>
 <p></p>
 <div class="buttoncontainer">
     <button id="rockButton" value="Rock">Rock</button>
@@ -16,6 +16,8 @@
     <button id="scissorsButton" value="Scissors">Scissors</button>    
 </div>
 <div class ="gameresults">
+</div>
+<div class ="endmessage">
 </div>
 </body>
 </html>
